benchmark-results/main/cseq/concurrentwitness2test.2025-11-17_11-13-00.logfiles/SV-COMP23_unreach-call.cseq-rfi006_pso.oepc_pso.opt_tso.oepc_tso.opt.yml.log
ConcurrentWitness2Test/start.sh svcomp23-witness-benchmarks/tools/cseq/pthread-wmm/rfi006_pso.oepc_pso.opt_tso.oepc_tso.opt.yml/rfi006_pso.oepc_pso.opt_tso.oepc_tso.opt.i --graphml-witness svcomp23-witness-benchmarks/tools/cseq/pthread-wmm/rfi006_pso.oepc_pso.opt_tso.oepc_tso.opt.yml/witness.graphml


--------------------------------------------------------------------------------


Traceback (most recent call last):
  File "/home/runner/work/ConcurrentWitness2Test/ConcurrentWitness2Test/ConcurrentWitness2Test/main.py", line 85, in translate_to_c
    sys.exit(-1)
SystemExit: -1
/tmp/BenchExec_run_h3x9h8ac/tmp/tmp_e28suo0.c
Compilation started
/tmp/BenchExec_run_h3x9h8ac/tmp/tmp_e28suo0.c: In function ‘P1’:
/tmp/BenchExec_run_h3x9h8ac/tmp/tmp_e28suo0.c:598:19: error: ‘FALSE’ undeclared (first use in this function)
  598 |   weak$$choice0 = FALSE;;
      |                   ^~~~~
/tmp/BenchExec_run_h3x9h8ac/tmp/tmp_e28suo0.c:598:19: note: each undeclared identifier is reported only once for each function it appears in
/tmp/BenchExec_run_h3x9h8ac/tmp/tmp_e28suo0.c:599:19: error: ‘TRUE’ undeclared (first use in this function)
  599 |   weak$$choice2 = TRUE;;
      |                   ^~~~
/tmp/BenchExec_run_h3x9h8ac/tmp/tmp_e28suo0.c: In function ‘main’:
/tmp/BenchExec_run_h3x9h8ac/tmp/tmp_e28suo0.c:691:19: error: ‘FALSE’ undeclared (first use in this function)
  691 |   weak$$choice0 = FALSE;;
      |                   ^~~~~

Compilation ended (exit code 1)
Verdict: Compilation error
Verdict: Unknown error
